Fixed kycHook in personal details 4

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -1210,6 +1210,10 @@
   }
 }
 
+#kyc-upload-address {
+  padding-bottom: 30px;
+}
+
 .kyc-doc-upload-container {
   margin-top: 20px;
   border: 1px dashed var(--skelton-color);
