--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1256,3 +1256,11 @@ body[data-device="mobile"] {
   color: #767E86 !important;
   font-size: 13px !important;
 }
+
+.MuiInputLabel-shrink{
+  font-size: 11px !important;
+}
+
+label{
+  font-size: 13px !important;
+}
