line-height changed

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1264,3 +1264,7 @@ body[data-device="mobile"] {
 label{
   font-size: 13px !important;
 }
+
+.MuiFormLabel-root {
+  line-height: 2 !important;
+}
