added Hover Effect For menu bar

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1037,43 +1037,43 @@ body[data-device="mobile"] {
 //   margin-top: 5px !important;
 // }
 
-.css-s60fer-OptionComponent{
-  margin: 3px 0px 0px 5px !important;
-}
+// .css-s60fer-OptionComponent{
+//   margin: 3px 0px 0px 5px !important;
+// }
 
-.css-163mfpo-ItemComponent{
-  background-color: white !important;
-  color: #767E86 !important;
-}
+// .css-163mfpo-ItemComponent{
+//   background-color: white !important;
+//   color: #767E86 !important;
+// }
 
-.colorbackground{
-  display: flex;
-  align-items: flex-start;
-  padding: 10px;
-}
-.colorbackground2{
-  background-color: #EEEEEE;
-  color: #161A2E;
-  width: 100%;
-}
+// .colorbackground{
+//   display: flex;
+//   align-items: flex-start;
+//   padding: 10px;
+// }
+// .colorbackground2{
+//   background-color: #EEEEEE;
+//   color: #161A2E;
+//   width: 100%;
+// }
 
-.css-ge5lft-ReactDropdownSelect:hover{
-  border-bottom: 1px solid #D6D6D6 !important;;
-}
+// .css-ge5lft-ReactDropdownSelect:hover{
+//   border-bottom: 1px solid #D6D6D6 !important;;
+// }
 
-.css-ge5lft-ReactDropdownSelect:focus-within {
-  border-bottom: 1px solid #4F2DA7 !important;
-}
+// .css-ge5lft-ReactDropdownSelect:focus-within {
+//   border-bottom: 1px solid #4F2DA7 !important;
+// }
 
-.react-dropdown-select-type-single {
-  display: inline-block !important;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-left: 5px;
-  margin-top: -8px;
-  font-size: 13px;
-  line-height: 21px;
-} 
+// .react-dropdown-select-type-single {
+//   display: inline-block !important;
+//   white-space: nowrap;
+//   overflow: hidden;
+//   margin-left: 5px;
+//   margin-top: -8px;
+//   font-size: 13px;
+//   line-height: 21px;
+// } 
 
 // ::-webkit-scrollbar {
 //   -webkit-appearance: none;
@@ -1120,19 +1120,6 @@ body[data-device="mobile"] {
   border-radius: 0px !important;
 }
 
-.css-1pahdxg-control:hover{border-color:  greenyellow   }
-
-.css-9gakcf-option{
- background-color: #EEEEEE !important;
- color: black !important;
- display: flex !important;
- align-items: flex-start;
- min-height: 41px !important;
- font-size: 13px !important;
- font-weight: normal;
- line-height: 21px !important;
- color: #161A2E;
-}
 
 .css-1n7v3ny-option{
   display: flex !important;  
@@ -1194,7 +1181,7 @@ body[data-device="mobile"] {
 }
 .css-b8ldur-Input{
   margin: 4px !important;
-  margin-top: 10px !important;
+  margin-top: 8px !important;
 }
 
 .css-1rhbuit-multiValue {  //Multi-select Box Container:
