new svg assets for slider component

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1611,8 +1611,7 @@ input#pan {
 
 
 .what-is-covered {
-  background: #4F2DA7;
-  color: #FFFFFF;
+  color: #161A2E;
   padding: 10px 10px 10px 0;
   border-radius: 4px;
   margin: 10px 0 0 0;
