drop down auto moment issue fixed

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1245,7 +1245,7 @@ label{
 .css-1hb7zxy-IndicatorsContainer{
 padding-right: 14px !important;
 }
-.css-nidneu-MenuList, .css-nidneu-MenuList{
+.css-nidneu-MenuList, .css-nidneu-MenuList, .css-feio4e-MenuList{
   padding-bottom : 0px !important;
   max-height: 246px !important;
   padding-top: 0px !important;
