--- a/react_webviews/src/kyc_esign/components/Style.scss
+++ b/react_webviews/src/kyc_esign/components/Style.scss
@@ -111,3 +111,79 @@ $text-color2: #8D879B;
     justify-content: flex-end;
   }
 }
+
+.kyc-esign-complete {
+  line-height: 1.5;
+  padding-bottom: 30px;
+
+  header {
+    text-align: center;
+
+    img {
+      margin: 40px 0;
+    }
+
+    .title {
+      font-size: 15px;
+      color: #160d2e;
+      font-weight: 700;
+    }
+
+    .text {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 14px;
+      line-height: 19px;
+      color: #8d879b;
+      margin-top: 10px;
+      column-gap: 5px;
+
+      img {
+        width: 24px;
+        margin: 0;
+      }
+    }
+
+    .message {
+      font-size: 13px;
+      line-height: 22px;
+      text-align: center;
+      color: #767e86;
+      margin-top: 30px;
+    }
+
+    .subtitle {
+      font-size: 14px;
+      font-weight: 400;
+      color: #4f2da7;
+      margin: 30px 0 0 0;
+      cursor: pointer;
+    }
+  }
+
+  .alert-status-info {
+    display: flex;
+    column-gap: 10px;
+    align-items: flex-start;
+    padding: 15px 15px 20px 15px;
+    border: 1px solid #fff5f6;
+    border-radius: 4px;
+    margin-top: 25px;
+    background-color: #fff6ce;
+
+    img {
+      width: 14px;
+    }
+
+    .text {
+      color: #160d2e;
+      font-size: 14px;
+
+      .title {
+        font-weight: 700;
+        margin: -2px 0 0 0;
+      }
+    }
+  }
+}
