added new dot loader on failed digilocker page

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1104,6 +1104,11 @@ $header-title-font-size: 20px;
   display: flex;
   flex-direction: column;
 }
+.flex-justify-center {
+  display: flex;
+  justify-content: center;
+}
+
 .generic-hr {
   border-top: 1px solid #ededed;
 }
