--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -213,7 +213,7 @@ body[data-device="web"] {
 
 .Container {
   padding: 20px 20px;
-  // overflow: visible !important;
+  overflow: visible !important;  //For Drop-down bug
   /* margin-bottom: 60px;
   padding-bottom: 20px !important;  */
   background-color: #fff;
