--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -965,7 +965,7 @@ body[data-device="mobile"] {
 .react-select__option{
   // padding-top: 13px !important;
   // padding-left: 12px !important;
-  // padding: 10px 0px 0px 10px !important;
+  padding: 10px 0px 10px 10px !important;
   font-size: 13px !important;
   line-height: 21px !important;
   color: #161A2E !important;
