--- a/react_webviews/src/payment/components/Style.scss
+++ b/react_webviews/src/payment/components/Style.scss
@@ -329,6 +329,9 @@
         font-size: 15px;
         line-height: 18px;
         padding-bottom: 20px;
+        border-top: 1px solid #ededed;
+        margin-top: 5px;
+        padding-bottom: 20px;
     }
     
     .card-footer-images {
