--- a/react_webviews/src/dashboard/nps/style.scss
+++ b/react_webviews/src/dashboard/nps/style.scss
@@ -60,7 +60,6 @@
 .nps-know-more {
   padding: 15px 0;
   border-radius: 5px;
-  margin: 20px auto;
 
   .detail {
     .head {
@@ -962,7 +961,7 @@
     position: relative;
     padding-top: 1px;
     background: #fff;
-    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     margin: 10px -10px 10px;
     top: 20px;
@@ -983,6 +982,18 @@
     .sub-title {
       color: #878787;
       font-size: 18px;
+    }
+  }
+
+  .invest-error {
+    h2 {
+      font-size: 30px;
+      font-weight: 400;
+    }
+
+    p {
+      font-size: 18px;
+      color: #878787;
     }
   }
 }
