--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -7,6 +7,7 @@
 .RadioButton.unchecked label {
   background: #fff;
   border: 1px solid #e6e6e6;
+  color: #161A2E;
 }
 .RadioButton.checked label {
   color: #fff;
