--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1039,7 +1039,7 @@ body[data-device="mobile"] {
   padding: 0 !important;
 }
 .css-6q0nyr-Svg, .css-19bqh2r{
-  color: #767E86 !important;
+  color: rgba(238, 238, 238 , 1);
   padding: 0 !important;
 }
 .css-6q0nyr-Svg:hover{
