--- a/react_webviews/src/fund_details/common/Style.scss
+++ b/react_webviews/src/fund_details/common/Style.scss
@@ -57,7 +57,7 @@
     border-bottom-right-radius: 0;
     text-transform: lowercase;
 
-    .content {
+    .fund-details-dual-button-content {
       display: flex;
       justify-content: space-between;
       column-gap: 18px;
