Fixed diy search screen styling

--- a/react_webviews/src/dashboard/diy/components/style.scss
+++ b/react_webviews/src/dashboard/diy/components/style.scss
@@ -266,6 +266,15 @@
 
 ////// DIY SEARCH START //////
 
+.diy-search-container {
+  height: 100%;
+  background-color: #fafafa;
+
+  .diy-search-container-main {
+    height: calc(100% - 56px)
+  }
+}
+
 .diy-search {
   margin: -20px -20px -56px -20px;
   background-color: #fafafa;
