--- a/react_webviews/src/fund_details/common/Style.scss
+++ b/react_webviews/src/fund_details/common/Style.scss
@@ -1,8 +1,17 @@
 .return-table-header {
   padding-left: 15px;
-  font-weight: 300;
-  font-size: 11px;
+  font-weight: 700;
+  font-size: 12px;
   text-transform: uppercase;
+}
+
+.iframe-table-data-head{
+  text-align: center;
+}
+
+.risk-measure-table{
+  padding-right: 20px;
+  text-align: end;
 }
 
 // Report Page
