--- a/react_webviews/src/fund_details/components/Style.scss
+++ b/react_webviews/src/fund_details/components/Style.scss
@@ -134,9 +134,10 @@
   display: flex;
   flex-wrap: wrap;
   padding: 0 15px;
-}
-.fd-asset-container > div {
-  flex: 0 50%;
+
+  & > div{
+    flex-basis: 33%;
+  }
 }
 .fd-asset-item {
   display: flex;
@@ -364,5 +365,13 @@
   
   .fund-info--iframe-icon{
     margin-right: 13px;
+  }
+}
+
+@media only screen and (max-width: 650px){
+  .fd-asset-container {
+    & > div{
+      flex-basis: 50%;
+    }
   }
 }
