--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -965,7 +965,7 @@ body[data-device="mobile"] {
 
 .react-select-container{
   border: none !important;
-  border-bottom: 1px solid #D6D6D6 !important;
+  // border-bottom: 1px solid #D6D6D6 !important;
 }
 .react-select__control{
   background: rgba(238, 238, 238, 0.3) !important;
