--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1060,13 +1060,13 @@ body[data-device="mobile"] {
   max-height: 246px !important;
 }
 .MuiInputLabel-shrink{
-  font-size: 11px !important;
+  // font-size: 11px !important;
 }
 label{
   font-size: 13px !important;
 }
 .MuiFormLabel-root {
-  line-height: 2 !important;
+  // line-height: 2 !important;
 }
 .react-select__indicators{
 padding-right: 14px !important;
