Fixed styling of switched transactions

--- a/react_webviews/src/reports/Style.scss
+++ b/react_webviews/src/reports/Style.scss
@@ -724,14 +724,23 @@
         font-size: 14px;
         font-weight: 700;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         column-gap: 10px;
+        position: relative;
 
         .circle {
           width: 12px;
           height: 12px;
           border-radius: 50%;
           border: 1px solid var(--primary);
+          background-color: white;
+          position: absolute;
+        }
+
+        .mf-name {
+          margin-left: -4px;
+          padding-left: 15px;
+          border-left: 1px dashed var(--primary);
         }
       }
 
@@ -740,6 +749,11 @@
 
         .circle {
           background-color: var(--primary);
+          margin-top: 5px;
+        }
+
+        .mf-name {
+          border-left: 0;
         }
       }
 
