QA-3441 and css fix

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1055,9 +1055,11 @@ body[data-device="mobile"] {
 }
 .react-select__menu{
   margin: 0 !important;
-  margin-top: 2px !important;
+  margin-top: 1px !important;
   border-radius: 0 0 4px 4px !important;
   max-height: 246px !important;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05) !important;
+  background: #FFFFFF !important;
 }
 .MuiInputLabel-shrink{
   // font-size: 11px !important;
