--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1026,7 +1026,10 @@ body[data-device="mobile"] {
   height: 18px !important;
   line-height: 17px !important;
   font-size: 13px !important;
-  margin: 14px 5px 3px 0px !important;
+  margin: 11px 5px 6px 0px !important;
+}
+.react-select__value-container--is-multi{
+  margin-top: 13px !important;
 }
 .react-select__multi-value__remove{
   margin-top: 3px;
@@ -1039,10 +1042,10 @@ body[data-device="mobile"] {
   padding: 0 !important;
 }
 .css-6q0nyr-Svg, .css-19bqh2r{
-  color: rgba(238, 238, 238 , 1);
+  color: rgba(238, 238, 238 , 1) !important;
   padding: 0 !important;
 }
-.css-6q0nyr-Svg:hover{
+.css-6q0nyr-Svg:hover,  .css-19bqh2r:hover{
   color: #4A4A4A !important;
   padding: 0 !important;
 }
@@ -1061,15 +1064,15 @@ body[data-device="mobile"] {
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05) !important;
   background: #FFFFFF !important;
 }
-.MuiInputLabel-shrink{
-  // font-size: 11px !important;
-}
+// .MuiInputLabel-shrink{
+//   // font-size: 11px !important;
+// }
 label{
   font-size: 13px !important;
 }
-.MuiFormLabel-root {
-  // line-height: 2 !important;
-}
+// .MuiFormLabel-root {
+//   // line-height: 2 !important;
+// }
 .react-select__indicators{
 padding-right: 12px !important;
 }
